Allow the full image to show in product's detail page (No cropping) Fixes #51

--- a/products/static/products/base.css
+++ b/products/static/products/base.css
@@ -184,9 +184,8 @@ a {
 }
 
 .detail-product-crop {
-    width: 100%;
     height: 500px;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
 }
 
